# psychiatrie-ia-app

./: .gitignore  README.md  fix-app.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  windsurf_deployment.yaml
public/: fallback.html  index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ErrorBoundary.tsx
src/components/dashboard/: AIAdvice.tsx  EmergencyAlert.tsx  PatientOverview.tsx  ReadingSuggestion.tsx  RecentActivity.tsx
src/components/layouts/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/patients/: AddPatientModal.tsx  PatientGrid.tsx  PatientList.tsx
src/pages/: AIChat.tsx  Dashboard.tsx  Diagnosis.tsx  Emergency.tsx  Evolution.tsx  Library.tsx  Login.tsx  PatientDetails.tsx  Patients.tsx  Reports.tsx  Symptoms.tsx  Treatments.tsx
src/styles/: index.css
